refactor: clean up dead code and fix minor code quality issues
Remove unused OrderNotFoundException, OrderAlreadyPaidException classes

Remove unused getOrdersByStatus method and related dependencies from OrderProvider

Remove unused userId field from UserNotFoundException

Remove unused createNullRatingError method from GetReviewsRequestValidator

Remove unused assertRestApiCreateResponse and assertRestApiUnAuthorizedResponse from RestAssertion

Change uploadUserAvatar return type from FileMetadataDto to void (return value was unused)

Fix AbstractEmailSender.getMessage to remove unused clazz parameter, hardcode EmailConfirmMessage.class

Make instance fields static final in PutUsersRequestValidator

Replace Collectors.toList() with .toList() in PutUsersRequestValidator

Fix name regex to use \u2019 (right single quotation mark) instead of '' (two chars)

Update http:// → https:// in checkstyle config comments

Add -- noinspection SqlWithoutWhere hints in ProductInfoRepository and ProductReviewRepository